WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270447
[GTK][Debug] ASSERTs on inspector tests
https://bugs.webkit.org/show_bug.cgi?id=270447
Summary
[GTK][Debug] ASSERTs on inspector tests
Philippe Normand
Reported
2024-03-04 08:36:11 PST
GTK Debug bots exit early now due to too many inspector crashes... inspector/timeline/timeline-recording.html for instance... STDERR: ASSERTION FAILED: entry.type == type STDERR: /app/webkit/Source/WebCore/inspector/agents/InspectorTimelineAgent.cpp(827) : void WebCore::InspectorTimelineAgent::didCompleteCurrentRecord(WebCore::TimelineRecordType) STDERR: 1 0x7f285bab3226 WTFCrash STDERR: 2 0x7f28669ed366 WTF::isIntegralOrPointerType() STDERR: 3 0x7f286c3da2e9 WebCore::InspectorTimelineAgent::didCompleteCurrentRecord(WebCore::TimelineRecordType) STDERR: 4 0x7f286c3d7317 operator() STDERR: 5 0x7f286c3e3eca call STDERR: 6 0x7f285bc1f177 WTF::Function<void (WTF::RunLoop::Event, WTF::String const&)>::operator()(WTF::RunLoop::Event, WTF::String const&) const STDERR: 7 0x7f285bc1f084 WTF::Observer<void (WTF::RunLoop::Event, WTF::String const&)>::operator()(WTF::RunLoop::Event, WTF::String const&) const STDERR: 8 0x7f285bc19718 operator()<WTF::Observer<void(WTF::RunLoop::Event, const WTF::String&)> > STDERR: 9 0x7f285bc1974c call STDERR: 10 0x7f285bc1b153 WTF::Function<void (WTF::Observer<void (WTF::RunLoop::Event, WTF::String const&)>&)>::operator()(WTF::Observer<void (WTF::RunLoop::Event, WTF::String const&)>&) const STDERR: 11 0x7f285bc1a0c6 WTF::WeakHashSet<WTF::Observer<void (WTF::RunLoop::Event, WTF::String const&)>, WTF::DefaultWeakPtrImpl, (WTF::EnableWeakPtrThreadingAssertions)1>::forEach(WTF::Function<void (WTF::Observer<void (WTF::RunLoop::Event, WTF::String const&)>&)> const&) STDERR: 12 0x7f285bc18971 WTF::RunLoop::notify(WTF::RunLoop::Event, char const*) STDERR: 13 0x7f285bc17f59 operator() STDERR: 14 0x7f285bc17f8b _FUN STDERR: 15 0x7f2854b17d36 g_main_context_dispatch STDERR: 16 0x7f2854b752b8 g_main_context_iterate.isra.0 STDERR: 17 0x7f2854b173ff g_main_loop_run STDERR: 18 0x7f285bc18606 WTF::RunLoop::run() STDERR: 19 0x7f2868654f0b WebKit::AuxiliaryProcessMainBase<WebKit::WebProcess, true>::run(int, char**) STDERR: 20 0x7f2868654b34 int WebKit::AuxiliaryProcessMain<WebKit::WebProcessMainGtk>(int, char**) STDERR: 21 0x7f28686543d8 WebKit::WebProcessMain(int, char**) STDERR: 22 0x5633e702e969 main STDERR: 23 0x7f285455208a __libc_start_call_main STDERR: 24 0x7f285455214b __libc_start_main STDERR: 25 0x5633e702e885 _start (gdb) p entry $1 = {record = {static isRef = <optimized out>, m_ptr = 0x7f673a2949f0}, data = {static isRef = <optimized out>, m_ptr = 0x7f673a2949a0}, children = {static isRefPtr = <optimized out>, m_ptr = 0x7f673a1ee730}, type = WebCore::TimelineRecordType::Composite} the type argument is type=WebCore::TimelineRecordType::RenderingFrame
Attachments
Add attachment
proposed patch, testcase, etc.
Vitaly Dyackhov
Comment 1
2024-03-06 07:55:24 PST
Pull request:
https://github.com/WebKit/WebKit/pull/25536
EWS
Comment 2
2024-03-07 02:46:16 PST
Committed
275785@main
(4a1b2c8aedf2): <
https://commits.webkit.org/275785@main
> Reviewed commits have been landed. Closing PR #25536 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug