Cherry-pick 275785@main (4a1b2c8aedf2). https://bugs.webkit.org/show_bug.cgi?id=270447

[GTK][Debug] ASSERTs on inspector tests
    https://bugs.webkit.org/show_bug.cgi?id=270447

    Reviewed by Carlos Garcia Campos.

    `InspectorTimelineAgent` uses a stack to store timeline records and
    expects `pushCurrentRecord()`/`didCompleteCurrentRecord()` to be called
    in the correct order.

    But since frame rendering occurs more frequently than compositing,
    associated records may be processed in the wrong order:

    - push `TimelineRecordType::RenderingFrame`
    - push `TimelineRecordType::Composite`
    - complete `TimelineRecordType::RenderingFrame`
    - complete `TimelineRecordType::Composite`

    To prevent this, we must explicitly call `didComposite()` before pushing
    a new `RenderingFrame` record, like it's done on Mac.

    * Source/WebCore/inspector/agents/InspectorTimelineAgent.cpp:
    (WebCore::InspectorTimelineAgent::internalStart):

    Canonical link: https://commits.webkit.org/275785@main

Canonical link: https://commits.webkit.org/274313.136@webkitglib/2.44